--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Guedr</string>
+    <string name="hello_word">Hola AMundio!!</string>
+    <string name="offline_wheather_image_description">offline_wheather</string>
+    <string name="change_american_system">CAMBIAR SISTEMA AMERICANO</string>
 </resources>
